[package]
name = "radip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.6.1"
openssl = { version = "0.10", features = ["vendored"] }
prettytable-rs = "^0.10"
reqwest = "0.12.5"
tokio = { version = "1.38.1", features = ["full"] }